--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,6 +120,7 @@
   }
   body {
     @apply bg-background text-foreground;
+
   }
 }
 
@@ -145,6 +146,12 @@
       opacity: 0.4;
     }
   }
+}
+
+
+
+.check{
+ border:1px solid red; 
 }
 
 ::-webkit-scrollbar {
